⚡️ Médoto que retorna umalista DTO e Imports Corrigido 13/03/2026