@@ -1,9 +1,8 @@
 package br.ifms.edu.GestaorX.service.implementacao;
 
 import java.util.List;
-
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
-
 import br.ifms.edu.GestaorX.dto.FornecedorDTO;
 import br.ifms.edu.GestaorX.model.Fornecedor;
 import br.ifms.edu.GestaorX.repository.FornecedorRepository;
@@ -23,7 +22,13 @@ public class FornecedorServiceImpl implements FornecedorService {
     }
 
     public List<FornecedorDTO> listar() {
-        return repository.findAll().stream().map(FornecedorDTO).toList();
+        return repository.findAll().stream()
+        .map((Fornecedor entity) -> {
+            FornecedorDTO dto =new FornecedorDTO();
+            dto.setNome(entity.getNome());
+            return dto;
+        })
+        .collect(Collectors.toList());
     }
 
 }
